tests/wordpress/fail/plugins/nextgen-gallery/nggallery.php
<?php
// ini_set('display_errors', '1');
// ini_set('error_reporting', E_ALL);
if (!class_exists('nggLoader')) {
class nggLoader {
	
	var $version     = '1.8.3';
	var $dbversion   = '1.8.0';
	var $minium_WP   = '3.1';
	var $donators    = 'http://nextgen.boelinger.com/donators.php';
	var $options     = '';
	var $manage_page;
	var $add_PHP5_notice = false;
?>
